[project]
name = "boson"
version = "0.0.0"
description = "BOSON photonic inverse design"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
  'absl-py==2.3.1',
  'angler==0.0.15',
  'annotated-types==0.7.0',
  'astunparse==1.6.3',
  'autograd==1.7.0',
  'blinker==1.9.0',
  'cachetools==5.5.2',
  'certifi==2026.1.4',
  "ceviche",
  'cffi==2.0.0',
  'charset-normalizer==3.4.4',
  'click==8.3.1',
  'cloudpickle==3.1.2',
  'colorama==0.4.6',
  'contourpy==1.3.2',
  'cryptography==46.0.4',
  'cssselect2==0.8.0',
  'cycler==0.12.1',
  'databricks-sdk==0.81.0',
  'filelock==3.20.3',
  'flatbuffers==25.12.19',
  'fonttools==4.61.1',
  'freetype-py==2.5.1',
  'fsspec==2026.1.0',
  'future==1.0.0',
  'gast==0.7.0',
  'gitdb==4.0.12',
  'GitPython==3.1.46',
  'google-auth==2.48.0',
  'google-pasta==0.2.0',
  'graphql-core==3.2.7',
  'greenlet==3.3.1',
  'grpcio==1.76.0',
  'h5py==3.15.1',
  'idna==3.11',
  'ImageIO==2.37.2',
  'importlib_metadata==8.7.1',
  'itsdangerous==2.2.0',
  'Jinja2==3.1.6',
  'joblib==1.5.3',
  'keras==3.12.0',
  'kiwisolver==1.4.9',
  'lazy_loader==0.4',
  'libclang==18.1.1',
  'lxml==6.0.2',
  'Mako==1.3.10',
  'markdown-it-py==4.0.0',
  'Markdown==3.10.1',
  'MarkupSafe==3.0.3',
  'matplotlib==3.9.2',
  'mdurl==0.1.2',
  'ml_dtypes==0.5.4',
  'mlflow-skinny==2.17.0',
  'mlflow==2.17.0',
  'mpmath==1.3.0',
  'multimethod==2.0.2',
  'namex==0.1.0',
  'networkx==3.4.2',
  'nodeenv==1.10.0',
  'numpy==2.1.3',
  'opentelemetry-api==1.39.1',
  'opentelemetry-sdk==1.39.1',
  'opentelemetry-semantic-conventions==0.60b1',
  'opt_einsum==3.4.0',
  'optree==0.18.0',
  'packaging==24.2',
  'pillow==12.1.0',
  'platformdirs==4.5.1',
  'protobuf==5.29.5',
  'pyarrow==17.0.0',
  'pyasn1==0.6.2',
  'pyasn1_modules==0.4.2',
  'pycairo==1.29.0',
  'pycparser==3.0',
  'pydantic==2.12.5',
  'pydantic_core==2.41.5',
  'Pygments==2.19.2',
  'pyMKL==0.0.3',
  'pyparsing==3.3.2',
  'pyright==1.1.408',
  'python-dateutil==2.9.0.post0',
  'python-utils==3.9.1',
  'pytz==2025.2',
  'pywin32==311',
  'PyYAML==6.0.3',
  'reportlab==4.4.9',
  'requests==2.32.5',
  'rich==14.3.1',
  'rlPyCairo==0.4.0',
  'rsa==4.9.1',
  'ryaml==0.5.0',
  'SciencePlots==2.2.0',
  'scikit-image==0.25.2',
  'scikit-learn==1.7.2',
  'scipy==1.14.1',
  'sentry-sdk==2.50.0',
  'six==1.17.0',
  'smmap==5.0.2',
  'SQLAlchemy==2.0.46',
  'sqlparse==0.5.5',
  'svglib==1.6.0',
  'sympy==1.14.0',
  'tensorboard-data-server==0.7.2',
  'tensorboard==2.20.0',
  'tensorflow==2.20.0',
  'termcolor==3.3.0',
  'threadpoolctl==3.6.0',
  'tifffile==2025.5.10',
  'tinycss2==1.5.1',
  'tomli==2.4.0',
  'torch==2.4.1',
  'torchonn-pyutils==0.0.3.1',
  'torchsummary==1.5.1',
  'torchvision==0.19.1',
  'tqdm==4.67.1',
  'typing-inspection==0.4.2',
  'typing_extensions==4.15.0',
  'tzdata==2025.3',
  'urllib3==2.6.3',
  'waitress==3.0.2',
  'wandb==0.24.0',
  'webencodings==0.5.1',
  'Werkzeug==3.1.5',
  'wrapt==2.0.1',
  'zipp==3.23.0',
]

[tool.uv]
package = false

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []

[tool.uv.sources]
ceviche = { path = "core/ceviche" }

